slightly reduce img size for on-board minions to avoid overflowing out of the frame

--- a/app/scripts/src/less/ui/replay/board.less
+++ b/app/scripts/src/less/ui/replay/board.less
@@ -22,7 +22,7 @@
 
 		.art {
 		    // height: 100%;
-		    width: 100%;
+		    width: 97%;
 		    position: absolute;
 		    left: 0;
 		    top: 0;
